# advent-of-code-2024-cpp

aoc2024/: CMakeLists.txt
aoc2024/aoc/: CMakeLists.txt  types.cc
aoc2024/day1/: CMakeLists.txt  example_d1.cc  input_d1.cc  main_d1.cc  part_one_d1.cc  part_two_d1.cc
aoc2024/day10/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day11/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day12/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day13/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day14/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day15/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day16/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day17/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day18/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day19/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day2/: CMakeLists.txt  example_d2.cc  input_d2.cc  main_d2.cc  part_one_d2.cc  part_two_d2.cc
aoc2024/day20/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day21/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day22/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day23/: example.cc  part_one.cc  part_two.cc
aoc2024/day24/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day25/: example.cc  input.cc  main.cc  part_one.cc
aoc2024/day3/: CMakeLists.txt  example.cc  example_d3.cc  input.cc  input_d3.cc  main.cc  main_d3.cc  part_one.cc  part_one_d3.cc  part_two.cc  part_two_d3.cc
aoc2024/day4/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day5/: example.cc  input.cc  part_one.cc
aoc2024/day6/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
aoc2024/day7/: example.cc  input.cc  part_one.cc  part_two.cc
aoc2024/day8/: example.cc  input.cc  main.cc  part_one.cc  part_two.cc
(+5 files in other folders)
